css/base: Fix 'SiteId' text size (was too big)

--- a/src/css/base-modern/8000-homepage.css
+++ b/src/css/base-modern/8000-homepage.css
@@ -132,6 +132,6 @@
 
 @media screen and (min-width: 28em) {
   .Homepage .SiteId {
-    font-size: 1.4em;
+    font-size: 1em;
   }
 }
